deployment/deployment-secondary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  selector:
    matchLabels:
      app: react-app
      region: secondary
  template:
    metadata:
      labels:
        app: react-app
        region: secondary
    spec:
      containers:
      - name: react-app
        image: bradmccoydev/demo:secondary
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: react-app
spec:
  selector:
    app: react-app
    region: primary
  ports:
  - port: 80
    targetPort: 80
