deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app
spec:
  selector:
    app: react-app
    region: primary
  ports:
  - port: 80
    targetPort: 80
