deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol:HTTP
    nginx.ingress.kubernetes.io/backend-protocol: "false"
  name: reactor-ingress
  namespace: default
spec:
  rules:
  - host: reactor.bradmccoy.io
    http:
      paths:
      - backend:
          service:
          name: react-app
          port:
            number: 80
        path: /
        pathType: Prefix
